# Clinical-Insight-Engine

./: .env.example  .gitignore  CIE Platform Roadmap.docx  CIE起動.command  CLAUDE.md  EVALUATION_SUMMARY.md  EVALUATION_SUMMARY_JA.md  IMPLEMENTATION GUIDE.md  IMPLEMENTATION_PLAN.md  MANIFEST.yaml  PROJECT_RULES.md  README.md  TEST_EXECUTION_PLAN.md  TEST_EXECUTION_PLAN_JA.md  docker-compose.prod.yml  docker-compose.yml  gitignore  pyproject.toml  sample_data.csv  validate_app_structure.py  事前準備.md  実装手順　最小版.md
.claude/: settings.json
.github/workflows/: security.yml  stat-consultant-release.yml
agents/: data-quality.yaml  knowledge-ingestion.yaml  orchestrator.yaml  planner.yaml  reporting.yaml  reviewer.yaml  runtime.yaml  security.yaml  statistics.yaml  visualization.yaml
architecture/: component-model.md  principles.md  runtime-model.md  security-model.md  security-pii-filter.md  ui-model.md  vision.md  workflow-model.md
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
backend/db/: init.sql
cie/: __init__.py
cie/agents/: __init__.py  base.py  data_quality.py  evaluation.py  planner.py  reporting.py  reviewer.py  runtime.py  statistics.py  visualization.py
cie/api/: __init__.py  conversation.py  dataset.py  deps.py  dialog.py  intent_display.py  main.py  models.py  rate_limit.py  services.py  upload_limits.py
cie/cache/: __init__.py  models.py  normalization.py  r_script_cache.json  r_script_cache.py  store.py
cie/core/: __init__.py  audit.py  config.py  database.py  env_file.py  exceptions.py  llm_client.py  secrets_store.py
cie/evaluation/: __init__.py  base.py  correctness.py  evaluator_service.py  regression.py  security.py  statistical.py  usability.py
cie/knowledge/: embedding_index.py  ingestion_agent.py  ingestion_guard.py  lifecycle.py  loader.py  models.py  reference_library.py
cie/reporting/: __init__.py  format_context.py  result_formatter.py
cie/runtime/: __init__.py  r_executor.py  runtime_provider.py  workspace_wrapper.py
cie/schemas/: __init__.py  payloads.py  validator.py
cie/security/: __init__.py  capability_token.py  context_guard.py  (+6 more)
cie_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
decisions/: ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md
docs/: AI_IMPLEMENTATION_LESSONS.md  CONTINUATION_PROMPT.md  DEVELOPER_HANDOFF.md  SRD_完全版.md  authoring-a-statistics-skill.md  仕様書_original.md  実装プロンプト集.md
evaluation/: correctness.yaml  regression.yaml  security.yaml  statistical.yaml  usability.yaml
frontend/: .gitignore  Dockerfile  README.md  index.html  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
prompts/: phase10_integration.md  phase1_foundation.md  phase2_schema_pii.md  phase3_security.md  phase4_6_runtime_agents_workflow.md  phase7_evaluation.md  phase8_skills.md  phase9_ui.md  phase_kip_knowledge_ingestion.md  phase_semantic_cache.md
r-engine/: Dockerfile  plumber.R
schemas/: agent.schema.json  analysis-plan.schema.json  analysis-request.schema.json  dataset.schema.json  knowledge-entry.schema.json  manuscript-section.schema.json  planner-input.schema.json  report.schema.json  review-report.schema.json  task-context.schema.json  task.schema.json  visualization-plan.schema.json  workflow.schema.json
scratchpad/: compare_bp.R  harness_api_smoke.py  harness_continuation_exec.py  harness_embedding_rag.py  harness_full_dag_exec.py  harness_reporting_exec.py  harness_skill_exec.py  harness_skill_improvement_exec.py  harness_viz_exec.py
scripts/: check_done.py  dev.sh  run_all_tests.sh  run_phase6_test.py
spec/: configuration.yaml  permissions.yaml  runtime-workspace-persistence.md  runtime.yaml  skill-lifecycle.md  system-workflow.yaml  system.yaml  workflow.yaml
stat-consultant/: README.md  start.bat  start.command
stat-consultant/backend/: .gitignore  pyproject.toml  run_backend.py  smoke_test.py  statconsultant.spec
stat-consultant/backend/app/: conversation.py  conversation_persistence.py  environment.py  environment_api.py  fewshot.py  llm.py  main.py  models_api.py  models_registry.py  origins.py  paths.py  pii.py  prompts.py  references.py  references_api.py  rstudio.py  rstudio_api.py  rstudio_auth.py  secrets_store.py  settings_api.py  ws_consult.py
test_data/: health_screening_japan.csv
tests/: __init__.py
(+270 files in other folders)
