[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cie-platform"
version = "2.1.0"
description = "Clinical Intelligence Environment — AI-native platform for clinical research support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "greenlet>=3.0",
    "httpx>=0.25",
    "keyring>=24.0",
    "pyyaml>=6.0",
    "jsonschema>=4.19",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    # httpx powers Starlette's TestClient (integration tests) and the Phase 1
    # API smoke harness (scratchpad/harness_api_smoke.py).
    "httpx>=0.27",
]
pdf = [
    "pymupdf4llm>=0.0.17",
]
ui = [
    "streamlit>=1.35",
]
rag = [
    "onnxruntime>=1.17",
    "numpy>=1.26",
]
api = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cie*"]

# -----------------------------------------------------------------------------
# Ruff — linter / formatter (PROJECT_RULES.md Section 14)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (enforce type hints)
    "D",   # pydocstyle (Google convention)
]
ignore = [
    "D105",  # Missing docstring in magic method
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
