[project]
name = "stat-consultant-backend"
version = "0.0.1"
description = "Stat Consultant backend (FastAPI + uvicorn)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.49",
    "websockets>=12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
